tabla mobile screen levi gap fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,11 +38,7 @@ svg {
 
 /* splosno za podstrani */
 
-p{
-  margin-bottom: 0.6rem
-}
-
-.sponzorji>img{
+.sponzorji>img {
   max-height: 2rem;
   max-width: 9rem;
   margin: 0.5rem;
@@ -95,41 +91,26 @@ a.disabled {
 
 /* @media screens */
 
-@media (max-width: 480px) {}
-
-@media (max-width: 576px) {
-  .multiColumn {
-    -webkit-column-count: 1;
-    -moz-column-count: 1;
-    column-count: 1;
-    -webkit-column-gap: 3em;
-    -moz-column-gap: 3em;
-    column-gap: 3em;
+@media (max-width: 350px) {
+  .img-tabla {
+    margin-left: -50px;
   }
+}
+
+@media (max-width: 400px) {
+  .img-tabla {
+    margin-left: -40px;
+  }
+
 }
 
 @media (min-width: 576px) {
-  .multiColumn {
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
-    column-count: 2;
-    -webkit-column-gap: 3em;
-    -moz-column-gap: 3em;
-    column-gap: 3em;
-  }
 }
 
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
 
-@media (min-width: 992px) {
-  .multiColumn {
-    -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 3;
-    -webkit-column-gap: 3em;
-    -moz-column-gap: 3em;
-    column-gap: 3em;
-  }
 }
+
+@media (min-width: 992px) {}
 
 @media (min-width: 1200px) {}
